BUG-32766 Code cleanup and refactoring. Contributed by Venkatesh Seetharam